fix[index.css]: Made carrot visible

--- a/index.css
+++ b/index.css
@@ -690,6 +690,7 @@ https://www.athleticlab.com/# */
   font-size: 40px; 
   color: white; 
   cursor: pointer;
+  z-index: 40; 
 }
 table{
   width: 100%; 
